syntax = "proto3";

package cowboys;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/sumlookup/cowboys/pb;cowboys";

service CowboysService {

  rpc Run(RunRequest) returns (RunResponse){};

  rpc ReloadDefaultCowboys(ReloadDefaultCowboysRequest) returns (ReloadDefaultCowboysResponse){};

  rpc ShootAtRandom(ShootAtRandomRequest) returns (ShootAtRandomResponse) {};

  // bonus endpoint
  rpc GetGameLogs(GetGameLogsRequest) returns (GetGameLogsResponse){};

}

message RunRequest {}
message RunResponse {}

message Cowboy {
  string name = 1;
  int32 health = 2;
  int32 damage = 3;
}

message ReloadDefaultCowboysRequest {}
message ReloadDefaultCowboysResponse {
  repeated Cowboy cowboys = 1;
}

message ShootAtRandomRequest {
  string shooter_id = 1;
  string game_id = 2;
  string shooter_name = 3;
  int32 shooter_damage = 4;
}

message ShootAtRandomResponse {
  int32 receiver_health = 1;
}

message GetGameLogsRequest {
  string game_id = 1;
  string sort = 2; // asc or desc -- by created_at
  int32 limit = 3;
  int32 offset = 4;
}

message GameLog {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  string shooter_id = 3;
  string receiver_id = 4;
  int32 damage = 5;
  int32 shooter_health = 6;
  int32 receiver_health = 7;

}

message GetGameLogsResponse {
  repeated GameLog game_logs = 1;
  int32 page = 2;
  int32 total_count = 3;
}